--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       content="Maxami - realize your most important business goals. We help our clients make realize their full potential"
     />
     <title>Maxami - realize your most important business goals</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body></body>
 </html>
