--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     />
     <title>Maxami - realize your most important business goals</title>
     <link rel="stylesheet" href="css/style.css" />
+     <!-- Google fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+     <link
+       href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins:wght@400;700&display=swap"
+       rel="stylesheet"
+     />
   </head>
   <body></body>
 </html>
