--- a/index.html
+++ b/index.html
@@ -14,13 +14,22 @@
     />
     <title>Maxami - realize your most important business goals</title>
     <link rel="stylesheet" href="css/style.css" />
-     <!-- Google fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com" />
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-     <link
-       href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins:wght@400;700&display=swap"
-       rel="stylesheet"
-     />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vel in,
+      odio iste, fugit doloribus nam autem et ut numquam laborum ab nemo
+      repellendus sapiente.
+    </p>
+  </body>
 </html>
