--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
     />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, vel in,
-      odio iste, fugit doloribus nam autem et ut numquam laborum ab nemo
-      repellendus sapiente.
-    </p>
+    <div class="container"></div>
   </body>
 </html>
