build link component

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, nemo?
+      </p>
+      <a href="#" class="link">read more</a>
+    </div>
   </body>
 </html>
