--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
       content="Maxami - realize your most important business goals. We help our clients make realize their full potential"
     />
     <title>Maxami - realize your most important business goals</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link link--arrow rel="stylesheet" href="css/style.css" />
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link link--arrow rel="preconnect" href="https://fonts.googleapis.com" />
     <link
+      link--arrow
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      link--arrow
       href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <!-- font awesome -->
   <link
+    link--arrow
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -32,7 +39,13 @@
   />
   <body>
     <div class="container">
-
+      <ul class="list">
+        <li class="item">list item</li>
+        <li class="item">list item</li>
+        <li class="item">list item</li>
+        <li class="item">list item</li>
+        <li class="item">list item</li>
+      </ul>
     </div>
   </body>
 </html>
